syntax = "proto3";

package submissions;

service SubmissionService {
  // Submissions Management
  rpc CreateSubmission (CreateSubmissionRequest) returns (Submission);
  rpc GetSubmission (GetSubmissionRequest) returns (Submission);
  rpc GetSubmissions (GetSubmissionsRequest) returns (SubmissionList);
  rpc UpdateSubmission (UpdateSubmissionRequest) returns (Submission);
  rpc DeleteSubmission (DeleteSubmissionRequest) returns (DeleteSubmissionResponse);

  // Assets Management
  rpc UploadAsset (stream UploadAssetRequest) returns (Asset);
  rpc UpdateAsset (stream UpdateAssetRequest) returns (Asset);
  rpc DownloadAsset (DownloadAssetRequest) returns (stream DownloadAssetResponse);
  rpc DeleteAsset (DeleteAssetRequest) returns (DeleteAssetResponse);
  rpc ListAssets (ListAssetsRequest) returns (AssetList);
}

// Submissions management
message Submission {
  int64 submission_id = 1;
  int64 lab_id = 2;
  int64 owner_id = 3;
  string created_at = 4;
  string updated_at = 5;
  string status = 6;
  int32 points = 7;
}

message CreateSubmissionRequest {
  int64 lab_id = 1;
  int64 owner_id = 2;
}

message GetSubmissionRequest {
  int64 submission_id = 1;
}

message SubmissionList {
  int64 total_count = 1;
  repeated Submission submissions = 2;
}

message GetSubmissionsRequest {
  int64 lab_id = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}

message UpdateSubmissionRequest {
  int64 submission_id = 1;
  optional string status = 2;
  optional int32 points = 3;
}

message DeleteSubmissionRequest {
  int64 submission_id = 1;
}

message DeleteSubmissionResponse {
  bool success = 1;
}

// Assets Management
message Asset {
  int64 asset_id = 1;
  int64 submission_id = 2;
  string filename = 3;
  int64 total_size = 4;
  string upload_date = 5;
}

message UploadAssetRequest {
  oneof data {
    int64 submission_id = 1;
    string filename = 2;
    int64 total_size = 3;
    bytes chunk = 4;
  }
}

message UpdateAssetRequest {
  oneof data {
    int64 asset_id = 1;
    string filename = 2;
    int64 total_size = 3;
    bytes chunk = 4;
  }
}

message DownloadAssetRequest {
  int64 asset_id = 1;
}

message DownloadAssetResponse {
  oneof data {
    Asset asset = 1;
    bytes chunk = 2;
  }
}

message DeleteAssetRequest {
  int64 asset_id = 1;
}

message DeleteAssetResponse {
  bool success = 1;
}

message ListAssetsRequest {
  int64 submission_id = 1;
}

message AssetList {
  int64 total_count = 1;
  repeated Asset assets = 2;
}